# maize

./: CHANGELOG.md  Cargo.toml  README.md  maize.cabal
src/: ast.rs  infer.rs  main.rs  parse.rs  process.rs  test.rs
