[package]
name = "maize"
version = "0.1.0"
authors = ["GoldenStack"]
edition = "2021"
description = "The Maize programming language"
repository = "https://github.com/GoldenStack/maize"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daggy = "0.8.0"
itertools = "0.12.1"
