[package]
name = "maize"
version = "0.1.1"
authors = ["GoldenStack"]
edition = "2021"
description = "The Maize programming language"
repository = "https://github.com/GoldenStack/maize"
license = "GPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daggy = "0.8.0"
itertools = "0.13.0"
